# iccp-file

./: .gitignore  README  iccp-file.cabal  memo  tips  todo
src/File/Binary/: ICCProfile.hs
src/File/Binary/ICCProfile/: TagTypes.hs  TagTypes_yet.hs
test/src/: Short.hs  Simplize.hs  nList.hs  readICCP2.hs  readTagTypes.hs  simple.hs  testTagTypes.hs
tools/: showmd5.hs
